Add `source_code_url` and `donate_url` to `Resource` object (#91)
